fix(leadspace-document): increase padding bottom to account for the overlap (#314)
* fix(pdf-viewer): add pdf viewer branch API key check

* fix(pdf-viewer): apply mobile layout changes

* fix(pdf-viewer): fix js lint issue

* fix(leadspace-document): adjust padding bottom to account for the overlap

* fix(pdf-viewer): apply mobile layout changes

* fix(leadspace-document): fix lint issue

--- a/blocks/pdf-viewer/pdf-viewer.css
+++ b/blocks/pdf-viewer/pdf-viewer.css
@@ -1,3 +1,7 @@
+body.document .section.leadspace-container > div:first-child > .leadspace.document {
+  padding-bottom: var(--spacer-layout-05);
+}
+
 .section.pdf-viewer-container > .pdf-viewer-wrapper {
   padding-top: 0;
   padding-bottom: 0;
@@ -32,6 +36,10 @@
 
 /** Desktop */
 @media screen and (min-width: 1200px) {
+  body.document .section.leadspace-container > div:first-child > .leadspace.document {
+    padding-bottom: var(--spacer-layout-07);
+  }
+
   .section.pdf-viewer-container > .pdf-viewer-wrapper {
     width: var(--section-width-desktop);
     margin-top: calc(var(--spacer-layout-06) * -1);
